# FastChwHwcConverter

./: CMakeLists.txt  DynamicLibraryManager.hpp  FastChwHwcConverter.hpp  FastChwHwcConverterCuda.hpp  FastChwHwcConverterROCm.hpp  README.md  benchmark.cpp  example.cpp  platform.h  simpleomp.cpp  simpleomp.h
.github/workflows/: ci.yml  release.yml
test/: benchmark.cpp  cuda_benchmark.cpp  example-opencv.cpp  example.cpp  rocm_benchmark.cpp
